app/static/css/styles.css
/*
 * SPDX-FileCopyrightText: 2022 PeARS Project, <community@pearsproject.org>, 
 *
 * SPDX-License-Identifier: AGPL-3.0-only
 */


:root {
    --primary-color: #2996cc;
    --secondary-color: #2d3250;
    --background-color: white;
    --link-color: #414141;
    --hover-color: black;
    --text-color: black;
 } 

:root.dark {
    --primary-color: #d66933;
    --secondary-color: #2d3250;
    --background-color: #2d3250;
    --link-color: #d66933;
    --hover-color: #f6b17a;
    --text-color: #fbf2f2;
 }


body {
	color: var(--text-color);
	background-color: var(--background-color);
}

a {
  color: var(--link-color);
}
a:hover {
  color: var(--hover-color);
}

h2, h3 {
  color: var(--text-color);
}

.walkthrough a {
  color: black;
 }

ion-icon {
  font-size: 20px;
}

.navbar-light {
  background-color: var(--primary-color);
}

.card {
  --bs-card-border-width: 0px;
  color: var(--secondary-color);
  background-color: var(--background-color);
}

.themes {
  --bs-card-border-width: 1px;
}

.card-body {
  color: var(--text-color);
  background-color: var(--background-color);
}

.card-header {
  color: var(--text-color);
  background-color: var(--background-color);
}


.card.indexer {
  --bs-card-border-width: 0px;
  border-width: 1px 1px 1px 1px;
}

.alert-success {
    --bs-alert-color: #636464;
    --bs-alert-bg: #e9ecef;
    --bs-alert-border-color: #636464;
}

.alert-info {
    --bs-alert-color: var(--text-color);
    --bs-alert-bg: var(--background-color);
    --bs-alert-border-color: var(--primary-color);
}

.navbar {
  background-color: var(--primary-color);
}

.nav-link {
  color: var(--secondary-color);
}

.nav-pills .nav-link.active {
    background-color: var(--secondary-color);
    color: #ffffff;
    padding-left: 10px;
    padding-right: 10px;
}

.btn-update {
	margin-left: 20px;
	--bs-btn-padding-y: .15rem;
	--bs-btn-padding-x: .2rem; 
	--bs-btn-font-size: .80rem;
	}

.btn-success {
  --bs-btn-color: white;
  --bs-btn-bg: var(--primary-color);
  --bs-btn-border-color: var(--primary-color);
  --bs-btn-hover-bg: var(--hover-color);
  --bs-btn-hover-border-color: var(--hover-color);
}

.btn-outline-success {
  --bs-btn-color: black;
  --bs-btn-border-color: black;
  --bs-btn-hover-bg: var(--primary-color);
  --bs-btn-hover-color: var(--primary-color);
  --bs-btn-hover-border-color: var(--primary-color);
}

.btn-primary {
  --bs-btn-bg: var(--primary-color);
  --bs-btn-border-color: var(--primary-color);
  --bs-btn-hover-bg: grey;
  --bs-btn-hover-border-color: grey;
}

.btn-info {
  --bs-btn-bg: white;
  --bs-btn-border-color: white;
  --bs-btn-hover-bg: white;
  --bs-btn-hover-border-color: #F8F8F8;
}

.btn-warning {
  --bs-btn-bg: red;
  --bs-btn-border-color:red;
  --bs-btn-hover-bg: orange;
  --bs-btn-hover-border-color: orange;
}


.btn-link {
  color: var(--link-color);
  --bs-btn-hover-color: var(--hover-color);
}

.submit-color-button {
  height: 30px;
  width: 30px;
  margin: 10px 5px 0 0;
  display: inline-block;
  border-top: 15px solid var(--theme-primary);
  border-bottom: 15px solid var(--theme-secondary);
  border-right: 15px solid var(--theme-text);
  border-left: 0;
  padding: 0;
  box-shadow: 0 0 3px gray;
}

.submit-color-button:hover {
  box-shadow: 2px 2px 2px gray;
}

.submit-color-button.active {
  box-shadow: 3px 3px 3px gray;
}

.results-emoji {
  margin: 0;
  color: transparent;
  text-shadow: 0 0 1px grey;
  font-size: 20px;
  position: relative;
  text-decoration: none;
}

.autocomplete {
  /*the container must be positioned relative:*/
  position: relative;
  display: inline-block;
}
.autocomplete-items {
  position: absolute;
  border: 1px solid #d4d4d4;
  border-bottom: none;
  border-top: none;
  z-index: 99;
  /*position the autocomplete items to be the same width as the container:*/
  top: 100%;
  left: 0;
  right: 0;
  display: block;
  visibility: visible;
}
.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: #fff;
  border-bottom: 1px solid #d4d4d4;
}
.autocomplete-items div:hover {
  /*when hovering an item:*/
  background-color: #e9e9e9;
}
.autocomplete-active {
  /*when navigating through the items using the arrow keys:*/
  background-color: DodgerBlue !important;
  color: #ffffff;
}

